# MobileRobotSimulator

./: .gitignore  README.md  RobotScan.sh  message.py  robot_scanner.py  runSimulator.sh  search_robots.py
catkin_ws/: .gitignore  frames.gv  install.sh  start.sh
catkin_ws/src/clips_ros/: CMakeLists.txt  package.xml
catkin_ws/src/clips_ros/clips_node/: .ros_pyclips_node.py.swn  .ros_pyclips_node.py.swo  .ros_pyclips_node.py.swp  clipsFunctions.py  ros_pyclips_node.py  ros_pyclips_services.py
catkin_ws/src/clips_ros/clips_node/CLIPS/: .virbot_blackboard.clp.swp  virbot_blackboard.clp
catkin_ws/src/clips_ros/clips_node/virbot_test/: .oracle.clp.swp  .oracle.dat.swp  clips_to_ros.clp  oracle.clp
catkin_ws/src/clips_ros/msg/: PlanningCmdSend.msg
catkin_ws/src/clips_ros/src/: .SimuladorRepresentation.cpp.swo  .SimuladorRepresentation.cpp.swp  SimuladorRepresentation.cpp
catkin_ws/src/clips_ros/src/clips_ros/: SimuladorRepresentation.h
catkin_ws/src/clips_ros/srv/: clearKDB.srv
catkin_ws/src/minibot_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/minibot_msgs/srv/: FinishRecording.srv  GetBattPerc.srv  StartRecording.srv  TransferFile.srv
catkin_ws/src/rob2w_description/: CMakeLists.txt  package.xml
catkin_ws/src/rob2w_description/src/launch/: config.rviz  rviz.launch
catkin_ws/src/rob2w_description/src/urdf/: R2D2.urdf  carritoAP.urdf  rob2w.xacro  six_w.urdf
catkin_ws/src/simulator/: CMakeLists.txt  package.xml
catkin_ws/src/simulator/msg/: Laser_values.msg  Parameters.msg  PosesArray.msg
catkin_ws/src/simulator/src/action_planner/: .action_planner.h.swp  action_planner.h
catkin_ws/src/simulator/src/action_planner/ViRBot_Cubes_ROS/: .exe_plan.clp.swo  .exe_plan.clp.swp  .objects_deftemplates.clp.swp  .planning_cubes.clp.swo  .planning_cubes.clp.swp  .ros_clips.clp.swp  .virbot_blackboard.clp.swo  cubes_stacks_original.clp  exe_plan.clp  objects_deftemplates.clp  planning_cubes.clp  ros_clips.clp  virbot_initial_state.clp
catkin_ws/src/simulator/src/behaviors/: .oracle.h.swo  .oracle.h.swp  oracle.h
catkin_ws/src/simulator/src/data/arena/: arena.top  arena.wrl
catkin_ws/src/simulator/src/data/arena2/: arena2.top  arena2.wrl
catkin_ws/src/simulator/src/data/bug/: bug.top  bug.wrl
catkin_ws/src/simulator/src/data/control/: control.yaml
catkin_ws/src/simulator/src/data/empty/: empty.wrl  obstacles.top
catkin_ws/src/simulator/src/data/final/: .final.wrl.swp  final.top  final.wrl
catkin_ws/src/simulator/src/data/final_doors/: final_doors.wrl
catkin_ws/src/simulator/src/data/objects/: .objects.txt.swp  objects.000  objects.txt
catkin_ws/src/simulator/src/data/obstacles/: obstacles.wrl
catkin_ws/src/simulator/src/data/random_1/: random_1.top  random_1.wrl
catkin_ws/src/simulator/src/data/random_10/: random_10.top  random_10.wrl
catkin_ws/src/simulator/src/data/random_2/: random_2.top  random_2.wrl
catkin_ws/src/simulator/src/data/random_3/: random_3.top  random_3.wrl
catkin_ws/src/simulator/src/data/random_4/: random_4.top  random_4.wrl
catkin_ws/src/simulator/src/data/random_5/: random_5.top  random_5.wrl
catkin_ws/src/simulator/src/data/random_6/: random_6.top  random_6.wrl
catkin_ws/src/simulator/src/data/random_7/: random_7.ord  random_7.raw  random_7.top  random_7.wrl  random_7_old.top  random_7_old.wrl
catkin_ws/src/simulator/src/data/random_8/: random_8.top  random_8.wrl  random_8_old.top  random_8_old.wrl
catkin_ws/src/simulator/src/data/random_9/: random_9.top  random_9.wrl
catkin_ws/src/simulator/src/data/room/: room.wrl
catkin_ws/src/simulator/src/expert_system/: .clips_to_ros.clp.swp  .oracle.clp.swn  .oracle.clp.swo  .oracle.clp.swp  oracle.clp  oracle_to_ros.clp
catkin_ws/src/simulator/src/gui/: .simulator_node.py.swp  MobileRobotSimulator.py  environment.py  p.c  simulator_node.py  start_rviz.sh
catkin_ws/src/simulator/src/joy_teleop/: joy_teleop_node.cpp
catkin_ws/src/simulator/src/launch/: carritoAP.launch  carritoAP_teleop.launch  minibot.launch  minibot_teleop.launch  rviz_turtlebot.launch  simulator.launch  turtlebot.rviz
catkin_ws/src/simulator/src/motion_planner/: .motion_planner_node.cpp.swk  .motion_planner_node.cpp.swl  .motion_planner_node.cpp.swm  .motion_planner_node.cpp.swn  .motion_planner_node.cpp.swo  .motion_planner_node.cpp.swp  action_planner_node.cpp  auto_charge_server.cpp  follow_line_client.cpp  follow_line_server.cpp  motion_planner_node.cpp  motion_planner_utilities.h  return_home_server.cpp
catkin_ws/src/simulator/src/simulator_physics/: .base_node.cpp.swp  base_node.cpp  find_obj_node.cpp  laser_node.cpp  light_node.cpp  light_server.cpp  manipulator_node.cpp
catkin_ws/src/simulator/src/state_machines/: .dijkstra.h.swp  .light_follower.h.swp  .sm_avoidance_destination.h.swp  dfs.cpp  dfs.h  dijkstra.h  dijkstralib.h  light_follower.h  line_follower.h  sm_avoidance.h  sm_avoidance_destination.h  sm_destination.h  user_sm.h
catkin_ws/src/simulator/src/turtlebot/: move_minibot_node.cpp  move_turtlebot_node.cpp  simple_move_node.cpp  start_rviz_turtlebot.sh
catkin_ws/src/simulator/src/utilities/: random.h  simulator_structures.h  utilities.h
catkin_ws/src/simulator/src/visualization/: map_rviz_node.cpp  objs_viz_node.cpp  real_arena_viz.cpp
catkin_ws/src/simulator/srv/: return_home.srv  simulator_MoveRealRobot.srv  simulator_algorithm_result.srv  simulator_base.srv  simulator_find_obj.srv  simulator_laser.srv  simulator_light.srv  simulator_manipulator.srv  simulator_object_interaction.srv  simulator_parameters.srv  simulator_robot_laser_values.srv  simulator_robot_step.srv  simulator_set_light_position.srv  simulator_stop.srv
